--- a/clients/php/composer.json
+++ b/clients/php/composer.json
@@ -15,7 +15,7 @@
     "pcov/clobber": "^2.0"
   },
   "require-dev": {
-    "php": "^7.4",
+    "php": "^8.1",
     "phpunit/phpunit": "^9.3.5"
   },
   "autoload": {
@@ -30,10 +30,6 @@
     }
   },
   "scripts": {
-    "test": [
-      "composer install",
-      "ls -a",
-      "./vendor/bin/phpunit --coverage-text --coverage-filter src/*.php --verbose --bootstrap vendor/autoload.php tests/*.php"
-    ]
+    "test": "./vendor/bin/phpunit --coverage-text --verbose"
   }
 }
