--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -40,3 +40,7 @@ use_repo(rules_ts_ext, "npm_typescript")
 # Lua (No Bazel support)
 
 # Rust (See WORKSPACE)
+
+# Swift
+
+bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")
