fix: switch to docker build and test for swift

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -206,3 +206,28 @@ jobs:
         # test-server not available on local network
         # env:
         #   TEST_SERVER_HOST: test-server
+
+  test-swift:
+    runs-on: ubuntu-latest
+    container: swift:5.5-focal-slim
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - run: |
+          cd ./clients/swift
+          swift test
+        env:
+          TEST_SERVER_HOST: test-server:3000
