--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -41,6 +41,6 @@ use_repo(rules_ts_ext, "npm_typescript")
 
 # Rust (See WORKSPACE)
 
-# Swift
-
-bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")
+# Swift // issues with Compiling tools/worker/compile_without_worker.cc [for tool] failed: absolute path inclusion(s) found in rule '@@rules_swift~//tools/worker:compile_without_worker'
+# bazel_dep(name = "apple_support", version = "1.14.0", repo_name = "build_bazel_apple_support")
+# bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")
