fix: add CC=clang before bazel testing too

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -181,7 +181,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bazel-
       - run: CC=clang bazel build //...
-      - run: bazel coverage --combined_report=lcov //...
+      - run: CC=clang bazel coverage --combined_report=lcov //...
         # - run: bazel test //...
         env:
           CC: clang
