fix: add bazel test job to action so that we can make sure the swift gets tested at least. coverage seems to be missing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -181,8 +181,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bazel-
       - run: CC=clang bazel build //...
+      - run: bazel test //...
+        env:
+          CC: clang
+          TEST_SERVER_HOST: test-server
       - run: CC=clang bazel coverage --combined_report=lcov //...
-        # - run: bazel test //...
         env:
           CC: clang
           TEST_SERVER_HOST: test-server
