Recommend SSWG plugin for Swift

--- a/clients/swift/.vscode/extensions.json
+++ b/clients/swift/.vscode/extensions.json
@@ -1,8 +1,5 @@
 {
   "recommendations": [
-    "DEVSENSE.composer-php-vscode",
-    "DEVSENSE.intelli-php-vscode",
-    "DEVSENSE.phptools-vscode",
-    "DEVSENSE.profiler-php-vscode"
+    "sswg.swift-lang"
   ]
 }
