--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,10 @@
 name: Test
 on:
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
   push:
     branches:
       - "*"
