--- a/clients/ocaml/test/dune
+++ b/clients/ocaml/test/dune
@@ -1,3 +1,3 @@
 (tests
  (names hash schedule client)
- (libraries alcotest alcotest-lwt vexilla))
+ (libraries alcotest alcotest-lwt vexilla fmt lwt))
