--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -234,3 +234,28 @@ jobs:
           swift test
         env:
           TEST_SERVER_HOST: test-server:3000
+
+  test-ocaml:
+    runs-on: ubuntu-latest
+    container: ocaml/opam:ubuntu-22.04-ocaml-4.14
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+      - run: |
+          cd ./clients/ocaml
+          opam install . --deps-only --with-test
+          dune test
+        env:
+          TEST_SERVER_HOST: test-server:3000
