--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -224,6 +224,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           cd ./clients/ocaml
+          opam init
+          eval (opam env)
           opam install . --deps-only --with-test
           dune test
         env:
