--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -256,6 +256,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           cd ./clients/ocaml
+          opam init
+          eval (opam env)
           opam install . --deps-only --with-test
           dune test
         env:
