--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,150 @@ jobs:
           docker build . --tag ghcr.io/vexilla/test-server:latest
           docker push ghcr.io/vexilla/test-server:latest
 
+  test-bazel:
+    runs-on: ubuntu-22.04
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Cache Bazel
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/bazel
+          key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
+          restore-keys: |
+            ${{ runner.os }}-bazel-
+      - run: bazel build //...
+      - run: bazel coverage --combined_report=lcov //...
+        env:
+          TEST_SERVER_HOST: test-server
+
+  test-elixir:
+    runs-on: ubuntu-latest
+    container: elixir:1.15.7
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Cache Mix dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            /clients/elixir/_build
+            /clients/elixir/deps
+          key: ${{ runner.os }}-elixir-${{ hashFiles('clients/elixir/mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-elixir-
+
+      - run: |
+          cd ./clients/elixir
+          mix deps.get
+          mix local.hex --force
+          mix test --cover --export-coverage default
+          mix test.coverage
+        env:
+          TEST_SERVER_HOST: test-server:3000
+
+  test-kotlin:
+    runs-on: ubuntu-latest
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 8
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Execute Gradle build and then test
+        run: |
+          cd clients/kotlin
+          ./gradlew build
+          ./gradlew test
+        # test-server not available on local network
+        # env:
+        #   TEST_SERVER_HOST: test-server
+
+  test-ocaml:
+    runs-on: ubuntu-latest
+    needs: ["publish-test-server"]
+
+    services:
+      test-server:
+        credentials:
+          username: vexilla
+          password: ${{secrets.GITHUB_TOKEN}}
+        image: ghcr.io/vexilla/test-server:latest
+        ports:
+          - 3000:3000
+        options: |
+          --health-cmd "curl -f http://localhost:3000/manifest.json"
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set-up OCaml 4.14
+        uses: ocaml/setup-ocaml@v2
+        with:
+          ocaml-compiler: "4.14"
+
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/ocaml
+          key: ${{ runner.os }}-ocaml-${{ hashFiles('**/*.opam.locked') }}
+          restore-keys: |
+            ${{ runner.os }}-ocaml-
+
+      - run: |
+          cd ./clients/ocaml
+          opam install . --deps-only --with-test --locked
+          dune build
+          dune test
+        env:
+          TEST_SERVER_HOST: test-server:3000
+
   test-php:
     runs-on: ubuntu-latest
     container: php:7.4.33-fpm
@@ -58,7 +202,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/composer-cache
-          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
 
       - name: Install Composer
         run: |
@@ -98,6 +244,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/Pipfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - run: pip3 install pipenv
 
       - run: |
@@ -106,109 +261,6 @@ jobs:
           pipenv run pytest --cov=vexilla_client
         env:
           TEST_SERVER_HOST: test-server:3000
-
-  test-elixir:
-    runs-on: ubuntu-latest
-    container: elixir:1.15.7
-    needs: ["publish-test-server"]
-
-    services:
-      test-server:
-        credentials:
-          username: vexilla
-          password: ${{secrets.GITHUB_TOKEN}}
-        image: ghcr.io/vexilla/test-server:latest
-        ports:
-          - 3000:3000
-        options: |
-          --health-cmd "curl -f http://localhost:3000/manifest.json"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Cache Mix dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            /clients/elixir/_build
-            /clients/elixir/deps
-          key: ${{ runner.os }}-${{ hashFiles('clients/elixir/mix.lock') }}
-
-      - run: |
-          cd ./clients/elixir
-          mix deps.get
-          mix local.hex --force
-          mix test --cover --export-coverage default
-          mix test.coverage
-        env:
-          TEST_SERVER_HOST: test-server:3000
-
-  test-bazel:
-    # Must use 20.04 currently since Swift does not have 5.5.x support for 22.04
-    runs-on: ubuntu-20.04
-    needs: ["publish-test-server"]
-
-    services:
-      test-server:
-        credentials:
-          username: vexilla
-          password: ${{secrets.GITHUB_TOKEN}}
-        image: ghcr.io/vexilla/test-server:latest
-        ports:
-          - 3000:3000
-        options: |
-          --health-cmd "curl -f http://localhost:3000/manifest.json"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Cache Bazel
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/bazel
-          key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE', 'WORKSPACE.bazel', 'MODULE.bazel') }}
-          restore-keys: |
-            ${{ runner.os }}-bazel-
-      - run: bazel build //...
-      - run: bazel coverage --combined_report=lcov //...
-        env:
-          TEST_SERVER_HOST: test-server
-
-  test-kotlin:
-    runs-on: ubuntu-latest
-    needs: ["publish-test-server"]
-
-    services:
-      test-server:
-        credentials:
-          username: vexilla
-          password: ${{secrets.GITHUB_TOKEN}}
-        image: ghcr.io/vexilla/test-server:latest
-        ports:
-          - 3000:3000
-        options: |
-          --health-cmd "curl -f http://localhost:3000/manifest.json"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-java@v3
-        with:
-          distribution: corretto
-          java-version: 8
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Execute Gradle build and then test
-        run: |
-          cd clients/kotlin
-          ./gradlew build
-          ./gradlew test
-        # test-server not available on local network
-        # env:
-        #   TEST_SERVER_HOST: test-server
 
   test-swift:
     runs-on: ubuntu-latest
@@ -231,45 +283,5 @@ jobs:
       - run: |
           swift build
           swift test
-        env:
-          TEST_SERVER_HOST: test-server:3000
-
-  test-ocaml:
-    runs-on: ubuntu-latest
-    needs: ["publish-test-server"]
-
-    services:
-      test-server:
-        credentials:
-          username: vexilla
-          password: ${{secrets.GITHUB_TOKEN}}
-        image: ghcr.io/vexilla/test-server:latest
-        ports:
-          - 3000:3000
-        options: |
-          --health-cmd "curl -f http://localhost:3000/manifest.json"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set-up OCaml 4.14
-        uses: ocaml/setup-ocaml@v2
-        with:
-          ocaml-compiler: "4.14"
-
-      - name: Cache Dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/ocaml
-          key: ${{ runner.os }}-ocaml-${{ hashFiles('**/*.opam.locked') }}
-          restore-keys: |
-            ${{ runner.os }}-ocaml-
-
-      - run: |
-          cd ./clients/ocaml
-          opam install . --deps-only --with-test --locked
-          dune build
-          dune test
         env:
           TEST_SERVER_HOST: test-server:3000
