--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -174,6 +174,7 @@ jobs:
       - run: |
           cd ./clients/ocaml
           opam install . --deps-only --with-test --locked
+          opam install alcotest alcotest-lwt
           opam exec -- dune build
           opam exec -- dune test
         env:
