--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["Chris Griffing <cmgriffing@gmail.com>"]
 edition = "2018"
 description = "A Rust client for the Vexilla Feature Flag System"
-license = "MIT"
+license = "BUSL-1.1"
 
 
 [dependencies]
