--- a/apps/forms/package.json
+++ b/apps/forms/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"prebuild": "geller scan -g ./src/**/*.ts"
+		"prebuild": "geller scan -g ./src/**/*.ts",
+		"postinstall": "node scripts/env.cjs"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
