--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -208,17 +208,6 @@ jobs:
   test-ocaml:
     runs-on: ubuntu-latest
 
-    services:
-      test-server:
-        credentials:
-          username: vexilla
-          password: ${{secrets.GITHUB_TOKEN}}
-        image: ghcr.io/vexilla/test-server:latest
-        ports:
-          - 3000:3000
-        options: |
-          --health-cmd "curl -f http://localhost:3000/manifest.json"
-
     steps:
       - uses: actions/checkout@v3
 
@@ -232,6 +221,7 @@ jobs:
         with:
           path: |
             ~/.cache/ocaml
+            /clients/ocaml/opam
           key: ${{ runner.os }}-ocaml-${{ hashFiles('**/*.opam.locked') }}
           restore-keys: |
             ${{ runner.os }}-ocaml-
@@ -239,7 +229,8 @@ jobs:
       - run: |
           cd ./clients/ocaml
           opam install . --deps-only --with-test --locked
-          dune build
-          dune test
-        # env:
-        #   TEST_SERVER_HOST: test-server:3000
+          opam install alcotest alcotest-lwt
+          opam exec -- dune build
+          opam exec -- dune test
+        env:
+          TEST_SERVER_HOST: test-server:3000
