--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,5 +1,8 @@
 name: PR Test
 on:
+  push:
+    branches:
+      - "!main"
   pull_request:
     types:
       - opened
@@ -115,8 +118,7 @@ jobs:
           TEST_SERVER_HOST: test-server:3000
 
   test-bazel:
-    # Must use 20.04 currently since Swift does not have 5.5.x support for 22.04
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     services:
       test-server:
@@ -230,6 +232,7 @@ jobs:
         with:
           path: |
             ~/.cache/ocaml
+            /clients/ocaml/opam
           key: ${{ runner.os }}-ocaml-${{ hashFiles('**/*.opam.locked') }}
           restore-keys: |
             ${{ runner.os }}-ocaml-
@@ -237,7 +240,8 @@ jobs:
       - run: |
           cd ./clients/ocaml
           opam install . --deps-only --with-test --locked
-          dune build
-          dune test
-        # env:
-        #   TEST_SERVER_HOST: test-server:3000
+          opam install alcotest alcotest-lwt
+          opam exec -- dune build
+          opam exec -- dune test
+        env:
+          TEST_SERVER_HOST: test-server:3000
