--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,16 +19,17 @@
     "@iconify/icons-octicon": "^1.2.42",
     "@iconify/icons-solar": "^1.2.0",
     "@iconify/react": "^1.1.3",
-    "@mantine/core": "^6.0.10",
-    "@mantine/dates": "^6.0.10",
-    "@mantine/dropzone": "^6.0.10",
-    "@mantine/form": "^6.0.11",
-    "@mantine/hooks": "^6.0.10",
-    "@mantine/notifications": "^6.0.10",
+    "@mantine/core": "^7.9.0",
+    "@mantine/dates": "^7.9.0",
+    "@mantine/dropzone": "^7.9.0",
+    "@mantine/form": "^7.9.0",
+    "@mantine/hooks": "^7.9.0",
+    "@mantine/notifications": "^7.9.0",
     "@tanstack/react-form": "^0.0.10",
     "@vexilla/client": "workspace:^",
     "@vexilla/hosts": "workspace:*",
     "case": "^1.6.3",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
