fix: remove packageManager field from package.json files

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "turbo": "^1.9.3",
     "typescript": "^5.2.2"
   },
-  "packageManager": "pnpm@8.5.0",
   "name": "vexilla",
   "dependencies": {
     "yargs": "^17.5.1"
   },
   "engines": {
-    "node": ">=18 <21.0.0"
+    "node": ">=18 <21.0.0",
+    "pnpm": ">=8.5.0"
   },
   "workspaces": [
     "apps/*",
