--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.0",
     "@fontsource/atkinson-hyperlegible": "^4.5.11",
     "@fontsource/racing-sans-one": "^4.5.10",
+    "@highlight-run/react": "^3.2.2",
     "@iconify/icons-game-icons": "^1.2.1",
     "@iconify/icons-octicon": "^1.2.42",
     "@iconify/icons-solar": "^1.2.0",
@@ -31,6 +32,7 @@
     "case": "^1.6.3",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.7",
+    "highlight.run": "^8.12.2",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "microdiff": "^1.3.2",
