chore(docs): only js for now, other languages will be enabled soon

--- a/apps/docs/src/content/snippets/generate-types.toml
+++ b/apps/docs/src/content/snippets/generate-types.toml
@@ -2,6 +2,6 @@ typescript = """
 vexilla generate typescript -o ./types
 """
 
-rust = """
-vexilla generate rust -o ./types
-"""
+# rust = """
+# vexilla generate rust -o ./types
+# """
