--- a/apps/docs/src/content/snippets/installation.toml
+++ b/apps/docs/src/content/snippets/installation.toml
@@ -6,6 +6,6 @@ yarn add @vexilla/client
 pnpm add @vexilla/client
 """
 
-rust = """
-cargo add vexilla_client
-"""
+# rust = """
+# cargo add vexilla_client
+# """
