--- a/apps/docs/src/content/snippets/usage-instantiation.toml
+++ b/apps/docs/src/content/snippets/usage-instantiation.toml
@@ -15,30 +15,15 @@ await client.syncFlags("FLAG_GROUP_NAME_OR_ID", (url) => {
 });
 """
 
-# rust = """
-# // Warning: unwraps are just for example code brevity
-# // create client
-# let mut client = VexillaClient::new(
-#     "dev",
-#     "http://localhost:3000",
-#     "YOUR_USERS_ID",
-# );
+rust = """
+// Warning: unwraps are just for example code brevity
+let mut client = VexillaClient::new("dev", "https://BUCKET_NAME.s3-website-AWS_REGION.amazonaws.com", user_id);
 
-# // sync manifest
-# client.sync_manifest(|url| {
-#     reqwest::blocking::get(url)
-#         .unwrap()
-#         .text()
-#         .unwrap()
-# });
+client.sync_manifest(|url| reqwest::blocking::get(url).unwrap().text().unwrap());
 
-# // sync flags
-# client.sync_flags(
-#   "FLAG_GROUP_NAME_OR_ID",
-#   |url| {
-#     reqwest::blocking::get(url)
-#       .unwrap()
-#       .text()
-#       .unwrap()
-# }).unwrap();
-# """
+client
+  .sync_flags("Scheduled", |url| {
+      reqwest::blocking::get(url).unwrap().text().unwrap()
+  })
+  .unwrap();
+"""
