--- a/clients/rust/README.toml
+++ b/clients/rust/README.toml
@@ -38,14 +38,15 @@ let mut client = VexillaClient::new(environment, server_host, user_id);
 client.sync_manifest(|url| reqwest::blocking::get(url).unwrap().text().unwrap());
 
 client
-  .sync_flags("Scheduled", |url| {
+  .sync_flags(GROUP_NAME_OR_ID, |url| {
       reqwest::blocking::get(url).unwrap().text().unwrap()
   })
   .unwrap();
 
-if client.should(FEATURE_NAME) {
-  // Do the thing
-}
+match client.should("GROUP_NAME_OR_ID", "FLAG_NAME_OR_ID") {
+  Ok() => println!("Do the thing for the flag"),
+  _ => println!("DON'T do the thing for the flag"),
+};
 ```
 '''
 
