--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,7 +12,7 @@
     "prebuild": "geller scan -g ./src/**/*.ts -g ./src/**/*.tsx -g ./src/**/*.astro"
   },
   "dependencies": {
-    "@astrojs/markdoc": "^0.8.1",
+    "@astrojs/markdoc": "^0.11.0",
     "@astrojs/react": "^3.0.8",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/tailwind": "^5.0.4",
@@ -23,6 +23,8 @@
     "@iconify/icons-ph": "^1.2.4",
     "@iconify/icons-solar": "^1.2.0",
     "@iconify/react": "^1.1.3",
+    "@nivo/boxplot": "^0.87.0",
+    "@nivo/core": "^0.87.0",
     "@phosphor-icons/core": "^2.0.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -32,7 +34,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.3",
-    "astro": "^4.0.7",
+    "astro": "^4.8.3",
     "astro-icon": "^0.8.2",
     "astro-toml": "^0.2.0",
     "class-variance-authority": "^0.7.0",
