--- a/clients/php/composer.json
+++ b/clients/php/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "vexilla/client",
   "description": "A client for the Vexilla Feature Flag System",
+  "version": "1.0.1",
   "type": "library",
   "license": "BUSL-1.1",
   "authors": [
