--- a/clients/js/package.json
+++ b/clients/js/package.json
@@ -9,7 +9,7 @@
     "test:scheduling": "ts-node src/test_scheduling.ts",
     "test:client": "ts-node src/test_client.ts",
     "test": "pnpm run \"/^test:.*/\"",
-    "compile": "tsc"
+    "compile": "tsup"
   },
   "author": {
     "name": "Chris Griffing",
@@ -19,19 +19,20 @@
   "license": "BSL-1.0",
   "devDependencies": {
     "@types/node": "^14.14.13",
+    "@vexilla/types": "workspace:*",
     "axios": "^0.21.0",
     "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^8.0.11",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "@vexilla/types": "workspace:*",
-    "case": "^1.6.3",
-    "dayjs": "^1.11.7",
+    "tsup": "^8.0.2",
+    "typescript": "^5.0.4",
     "uuid": "^8.3.2",
     "xxhashjs": "^0.2.2"
+  },
+  "dependencies": {
+    "case": "^1.6.3",
+    "dayjs": "^1.11.7"
   },
   "files": [
     "dist/**/*"
@@ -40,5 +41,18 @@
     "hooks": {
       "pre-commit": "npm run compile && npm run test"
     }
+  },
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true,
+    "dts": true,
+    "dts-resolve": true,
+    "noExternal": [
+      "@vexilla/types"
+    ]
   }
 }
