--- a/clients/js/tsconfig.json
+++ b/clients/js/tsconfig.json
@@ -1,8 +1,37 @@
 {
   "include": ["src/**/*"],
   "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2015",
     "declaration": true,
     "esModuleInterop": true,
     "outDir": "dist"
   }
+  // "compilerOptions": {
+  //   /* Base Options: */
+  //   "esModuleInterop": true,
+  //   "skipLibCheck": true,
+  //   "target": "es2022",
+  //   "allowJs": true,
+  //   "resolveJsonModule": true,
+  //   "moduleDetection": "force",
+  //   "isolatedModules": true,
+  //   "verbatimModuleSyntax": true,
+  //   /* Strictness */
+  //   "strict": true,
+  //   "noUncheckedIndexedAccess": true,
+  //   "noImplicitOverride": true,
+  //   /* If transpiling with TypeScript: */
+  //   "module": "NodeNext",
+  //   "outDir": "dist",
+  //   "sourceMap": true,
+  //   /* AND if you're building for a library: */
+  //   "declaration": true,
+  //   /* AND if you're building for a library in a monorepo: */
+  //   "composite": true,
+  //   "declarationMap": true,
+  //   /* If your code doesn't run in the DOM: */
+  //   "lib": ["es2022"]
+  // }
 }
