feat(docs): enable elixir snippets in docs

--- a/apps/docs/src/content/snippets/generate-types.toml
+++ b/apps/docs/src/content/snippets/generate-types.toml
@@ -1,7 +1,11 @@
-typescript = """
-vexilla generate typescript -o ./types
+elixir = """
+vexilla generate elixir -o ./lib/types
 """
 
 rust = """
-vexilla generate rust -o ./types
+vexilla generate rust -o ./src/types
+"""
+
+typescript = """
+vexilla generate typescript -o ./src/types
 """
