--- a/apps/docs/src/content/snippets/usage-logic.toml
+++ b/apps/docs/src/content/snippets/usage-logic.toml
@@ -1,7 +1,7 @@
-typescript = """
-if (client.should("GROUP_NAME_OR_ID", "FLAG_NAME_OR_ID")) {
+elixir = """
+if VexillaClient.should!(config, "GROUP_NAME_OR_ID", "FLAG_NAME_OR_ID") do
   // do something
-}
+end
 """
 
 rust = """
@@ -9,4 +9,10 @@ match client.should("GROUP_NAME_OR_ID", "FLAG_NAME_OR_ID") {
   Ok() => println!("Do the thing for the flag"),
   _ => println!("DON'T do the thing for the flag"),
 };
+"""
+
+typescript = """
+if (client.should("GROUP_NAME_OR_ID", "FLAG_NAME_OR_ID")) {
+  // do something
+}
 """
